--- a/.gitignore
+++ b/.gitignore
@@ -16,11 +16,11 @@ __pycache__/
 *.bak
 
 ##sessions folder an error
-Waf2Py/errors/
-Waf2Py/sessions/
+Waf2Py/errors/*
+Waf2Py/sessions/*
 
 ##database folder
-Waf2Py/databases/
+Waf2Py/databases/*
 
 ##logrotation folder
-Waf2Py/logrotation.d/
+Waf2Py/logrotation.d/*
